--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -176,20 +176,33 @@ jobs:
         with:
           creds: ${{ secrets.ORG_AZ_CREDENTIALS }}
       
-      - name: Install SqlPackage
-        run: |
-          Invoke-WebRequest -Uri "https://aka.ms/sqlpackage-windows" -OutFile "sqlpackage.zip"
-          Expand-Archive -Path "sqlpackage.zip" -DestinationPath "${{ github.workspace }}\sqlpackage"
+      #- name: Install SqlPackage
+      #  run: |
+      #    Invoke-WebRequest -Uri "https://aka.ms/sqlpackage-windows" -OutFile "sqlpackage.zip"
+      #    Expand-Archive -Path "sqlpackage.zip" -DestinationPath "${{ github.workspace }}\sqlpackage"
 
       # https://github.com/azure/sql-action
+      #- name: Deploy DacPac to Azure SQL
+      #  run: |
+      #    & "${{ github.workspace }}\sqlpackage\SqlPackage.exe" /Action:Publish /SourceFile:"${{ github.workspace }}\DacPac\FabrikamFiber.Database.dacpac" /TargetConnectionString:"${{ env.DB_CONNECTION_STRING }}"
+      
+      #- name: Execute SQL Script
+      #  run: |
+      #    Invoke-Sqlcmd -ConnectionString "${{ env.DB_CONNECTION_STRING }}" -InputFile "scripts\insert-data.sql"
+      
       - name: Deploy DacPac to Azure SQL
-        run: |
-          & "${{ github.workspace }}\sqlpackage\SqlPackage.exe" /Action:Publish /SourceFile:"${{ github.workspace }}\DacPac\FabrikamFiber.Database.dacpac" /TargetConnectionString:"${{ env.DB_CONNECTION_STRING }}"
+        uses: azure/sql-action@v2.3
+        with:        
+          connection-string: ${{ env.DB_CONNECTION_STRING }}
+          path: 'DacPac\FabrikamFiber.Database.dacpac'
+          action: 'Publish'
       
       - name: Execute SQL Script
-        run: |
-          Invoke-Sqlcmd -ConnectionString "${{ env.DB_CONNECTION_STRING }}" -InputFile "scripts\insert-data.sql"
-      
+        uses: azure/sql-action@v2.3
+        with:        
+          connection-string: ${{ env.DB_CONNECTION_STRING }}
+          path: 'scripts\insert-data.sql'
+
       - name: Deploy APP
         uses: azure/webapps-deploy@v3
         with:
