feat: atualizar informações do ambiente no pipeline
Modificado o valor do parâmetro "name" para "Ambiente" e o valor correspondente para incluir informações sobre o ambiente de QA e o número da build. Essa alteração melhora a clareza das informações exibidas durante a execução do pipeline.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -232,8 +232,8 @@ jobs:
           app-settings-json: |
             [
               {
-                "name": "VersionInfo__Number",
-                "value": "1.0.${{ github.run_number }}",
+                "name": "Ambiente",
+                "value": "QA - Build Number: ${{ github.run_number }}",
                 "slotSetting": false
               }
             ]
