--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -108,6 +108,15 @@ jobs:
         with:
           creds: ${{ secrets.ORG_AZ_CREDENTIALS }}
       
+      #- name: Install SqlPackage
+      #  run: |
+      #    Invoke-WebRequest -Uri "https://aka.ms/sqlpackage-windows" -OutFile "sqlpackage.zip"
+      #    Expand-Archive -Path "sqlpackage.zip" -DestinationPath "${{ github.workspace }}\sqlpackage"
+      
+      #- name: Deploy DacPac to Azure SQL
+      #  run: |
+      #    & "${{ github.workspace }}\sqlpackage\SqlPackage.exe" /Action:Publish /SourceFile:"${{ github.workspace }}\DacPac\FabrikamFiber.Database.dacpac" /TargetConnectionString:"${{ env.DB_CONNECTION_STRING }}"
+     
       - name: Deploy DacPac to Azure SQL
         uses: azure/sql-action@v2.3
         with:        
